--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,6 @@
     "com.unity.ai.navigation": "1.1.4",
     "com.unity.burst": "1.8.8",
     "com.unity.cinemachine": "3.0.0-pre.8",
-    "com.unity.collab-proxy": "2.0.7",
     "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.inputsystem": "1.7.0",
@@ -19,6 +18,7 @@
     "com.unity.shadergraph": "14.0.8",
     "com.unity.splines": "2.4.0",
     "com.unity.test-framework": "1.1.33",
+    "com.unity.test-framework.performance": "3.0.3",
     "com.unity.testtools.codecoverage": "1.2.4",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.5",
