Removed Checks on push
Doing this would mean double checks, expensive. I could theoretically enable them on develop again, but it seems like it'd be too much work for our seniors.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Unity Actions
 
 on:
   pull_request: {}
-  push: { branches: [stable, develop] }
+  #push: { branches: [stable, develop] }
   workflow_dispatch: {}
 
 jobs:
