--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 name: Unity Actions
 
 on:
-  pull_request: {}
-  #push: { branches: [stable, develop] }
+  pull_request: { branches: [stable] }
   workflow_dispatch: {}
 
 jobs:
@@ -51,12 +50,12 @@ jobs:
   buildWithLinux:
     name: Build for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
-    #needs: [tests]
+    needs: [tests]
     strategy:
       fail-fast: false
       matrix:
         targetPlatform:
-          - StandaloneLinux64
+          #- StandaloneLinux64
           - StandaloneWindows64
     outputs:
       buildVersion: ${{ steps.build.outputs.buildVersion }}
