--- a/Assets/KinematicCharacterController/Examples/Scripts/KCC.Examples.asmdef
+++ b/Assets/KinematicCharacterController/Examples/Scripts/KCC.Examples.asmdef
@@ -1,11 +1,8 @@
 {
-    "name": "Bonkers.Controls",
-    "rootNamespace": "Bonkers.Controls",
+    "name": "KCC.Examples",
+    "rootNamespace": "",
     "references": [
-        "Unity.InputSystem",
-        "Unity.Cinemachine",
         "KCC",
-        "KCC.Examples",
         "KCC.ExampleCharacter"
     ],
     "includePlatforms": [],
