--- a/Assets/KinematicCharacterController/ExampleCharacter/Scripts/KCC.ExampleCharacter.asmdef
+++ b/Assets/KinematicCharacterController/ExampleCharacter/Scripts/KCC.ExampleCharacter.asmdef
@@ -1,12 +1,9 @@
 {
-    "name": "Bonkers.Controls",
-    "rootNamespace": "Bonkers.Controls",
+    "name": "KCC.ExampleCharacter",
+    "rootNamespace": "",
     "references": [
-        "Unity.InputSystem",
-        "Unity.Cinemachine",
         "KCC",
-        "KCC.Examples",
-        "KCC.ExampleCharacter"
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
