--- a/Assets/KinematicCharacterController/Examples/Scripts/Editor/KCC.Examples.Editor.asmdef
+++ b/Assets/KinematicCharacterController/Examples/Scripts/Editor/KCC.Examples.Editor.asmdef
@@ -1,14 +1,13 @@
 {
-    "name": "Bonkers.Controls",
-    "rootNamespace": "Bonkers.Controls",
+    "name": "KCC.Examples.Editor",
+    "rootNamespace": "",
     "references": [
-        "Unity.InputSystem",
-        "Unity.Cinemachine",
         "KCC",
-        "KCC.Examples",
-        "KCC.ExampleCharacter"
+        "KCC.Examples"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
