--- a/Assets/03_Scripts/99_Shared/Bonkers.Shared.asmdef
+++ b/Assets/03_Scripts/99_Shared/Bonkers.Shared.asmdef
@@ -2,7 +2,8 @@
     "name": "Bonkers.Shared",
     "rootNamespace": "Bonkers.Shared",
     "references": [
-        "Unity.Mathematics"
+        "Unity.Mathematics",
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
