--- a/Assets/03_Scripts/01_Lobby/Bonkers.Lobby.asmdef
+++ b/Assets/03_Scripts/01_Lobby/Bonkers.Lobby.asmdef
@@ -1,29 +1,30 @@
 {
-  "name": "Bonkers.Lobby",
-  "rootNamespace": "Bonkers.Lobby",
-  "references": [
-    "Unity.InputSystem",
-    "Unity.Netcode.Components",
-    "Unity.Netcode.Runtime",
-    "Unity.Networking.Transport",
-    "Unity.Services.Authentication",
-    "Unity.Services.Core",
-    "Unity.Services.Core.Networking",
-    "Unity.Services.Lobbies",
-    "Unity.Services.Matchmaker",
-    "Unity.Services.Relay",
-    "Unity.Cinemachine",
-    "QFSW.QC",
-    "UniTask",
-    "CGTK.Utils.Extensions"
-  ],
-  "includePlatforms": [],
-  "excludePlatforms": [],
-  "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
-  "defineConstraints": [],
-  "versionDefines": [],
-  "noEngineReferences": false
+    "name": "Bonkers.Lobby",
+    "rootNamespace": "Bonkers.Lobby",
+    "references": [
+        "Unity.InputSystem",
+        "Unity.Netcode.Components",
+        "Unity.Netcode.Runtime",
+        "Unity.Networking.Transport",
+        "Unity.Services.Authentication",
+        "Unity.Services.Core",
+        "Unity.Services.Core.Networking",
+        "Unity.Services.Lobbies",
+        "Unity.Services.Matchmaker",
+        "Unity.Services.Relay",
+        "Unity.Cinemachine",
+        "QFSW.QC",
+        "UniTask",
+        "CGTK.Utils.Extensions",
+        "Bonkers.Controls"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
