--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,47 +5,47 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  tests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4.1.0
-        with:
-          fetch-depth: 0
-          lfs: true
-      - name: Create LFS file list
-        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
-
-      - name: Restore LFS cache
-        uses: actions/cache@v3.3.2
-        id: lfs-cache
-        with:
-          path: .git/lfs
-          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
-
-      - name: Git LFS Pull
-        run: |
-          git lfs pull
-          git add .
-          git reset --hard
-
-      - name: Cache Library
-        uses: actions/cache@v3.3.2
-        with:
-          path: Library
-          key: Library-test-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-          restore-keys: Library-test-
-
-      - name: Run Unit Tests
-        uses: game-ci/unity-test-runner@v3.1.0
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-        with:
-          testMode: editmode
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
+#  tests:
+#    name: Unit Tests
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout Repository
+#        uses: actions/checkout@v4.1.0
+#        with:
+#          fetch-depth: 0
+#          lfs: true
+#      - name: Create LFS file list
+#        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+#
+#      - name: Restore LFS cache
+#        uses: actions/cache@v3.3.2
+#        id: lfs-cache
+#        with:
+#          path: .git/lfs
+#          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+#
+#      - name: Git LFS Pull
+#        run: |
+#          git lfs pull
+#          git add .
+#          git reset --hard
+#
+#      - name: Cache Library
+#        uses: actions/cache@v3.3.2
+#        with:
+#          path: Library
+#          key: Library-test-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+#          restore-keys: Library-test-
+#
+#      - name: Run Unit Tests
+#        uses: game-ci/unity-test-runner@v3.1.0
+#        env:
+#          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+#          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+#          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+#        with:
+#          testMode: editmode
+#          githubToken: ${{ secrets.GITHUB_TOKEN }}
 
   build:
     name: Build for ${{ matrix.targetPlatform }}
