--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,7 @@ jobs:
           name: build-${{ matrix.targetPlatform }}.zip
           path: build/build-${{ matrix.targetPlatform }}.zip
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+          content-type: text/plain # Optional
         #   asset_name: build-${{ matrix.targetPlatform }}.zip
         #   file: build/build-${{ matrix.targetPlatform }}.zip
         #   tag: ${{ github.ref }}
