--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,23 @@
 name: Unity Actions
 
 on:
-  pull_request: { branches: [stable] }
-  workflow_dispatch: {}
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build:
     name: Build for ${{ matrix.targetPlatform }}
     runs-on: ubuntu-latest
-    #needs: [tests]
     strategy:
       fail-fast: false
       matrix:
         targetPlatform:
-          #- StandaloneLinux64
           - StandaloneWindows64
-    outputs:
-      buildVersion: ${{ steps.build.outputs.buildVersion }}
+
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
@@ -27,8 +25,7 @@ jobs:
         run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
 
       - name: Restore LFS cache
-        uses: actions/cache@v3.3.2
-        id: lfs-cache
+        uses: actions/cache@v2
         with:
           path: .git/lfs
           key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
@@ -40,10 +37,11 @@ jobs:
           git reset --hard
 
       - name: Cache Library
-        uses: actions/cache@v3.3.2
+        id: cache-library
+        uses: actions/cache@v2
         with:
           path: Library
-          key: Library-build-${{ matrix.targetPlatform }}-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+          key: Library-build-${{ matrix.targetPlatform }}
           restore-keys: Library-build-${{ matrix.targetPlatform }}-
 
       - name: Build Unity Project
@@ -57,64 +55,19 @@ jobs:
           targetPlatform: ${{ matrix.targetPlatform }}
 
       - name: Upload Build
-        uses: actions/upload-artifact@v3
-        #if: github.event.action == 'published' || contains(github.event.inputs.workflow_mode, matrix.targetPlatform) || contains(github.event.inputs.workflow_mode, 'Steam')
+        uses: actions/upload-artifact@v2
         with:
           name: build-${{ matrix.targetPlatform }}
           path: build/${{ matrix.targetPlatform }}
 
       - name: Zip Build
-        uses: montudor/action-zip@v1
-        #if: github.event.action == 'published' && matrix.targetPlatform == 'StandaloneWindows64'
-        with:
-          args: zip -qq -r build/build-${{ matrix.targetPlatform }}.zip build/${{ matrix.targetPlatform }}
+        if: startsWith(github.ref, 'refs/tags/v') && matrix.targetPlatform == 'StandaloneWindows64'
+        run: zip -qq -r build/build-${{ matrix.targetPlatform }}.zip build/${{ matrix.targetPlatform }}
 
-      - name: Upload Zip to GitHub Release
-        uses: d1ceward/draft-assets-release-action@v2.0.0
-        #uses: svenstaro/upload-release-action@v2
-        #if: github.event.action == 'published' && matrix.targetPlatform == 'StandaloneWindows64'
+      - name: Publish Release
+        if: startsWith(github.ref, 'refs/tags/v') && matrix.targetPlatform == 'StandaloneWindows64'
+        uses: elgohr/Github-Release-Action@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          files: build/build-${{ matrix.targetPlatform }}.zip
-
-#  tests:
-#    name: Unit Tests
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout Repository
-#        uses: actions/checkout@v4.1.0
-#        with:
-#          fetch-depth: 0
-#          lfs: true
-#      - name: Create LFS file list
-#        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
-#
-#      - name: Restore LFS cache
-#        uses: actions/cache@v3.3.2
-#        id: lfs-cache
-#        with:
-#          path: .git/lfs
-#          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
-#
-#      - name: Git LFS Pull
-#        run: |
-#          git lfs pull
-#          git add .
-#          git reset --hard
-#
-#      - name: Cache Library
-#        uses: actions/cache@v3.3.2
-#        with:
-#          path: Library
-#          key: Library-test-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-#          restore-keys: Library-test-
-#
-#      - name: Run Unit Tests
-#        uses: game-ci/unity-test-runner@v3.1.0
-#        env:
-#          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-#          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-#          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-#        with:
-#          testMode: editmode
-#          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          title: Release for ${{ matrix.targetPlatform }}
