--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
 name: Unity Actions
 
 on:
-  push:
-    tags:
-      - 'v*'
+  pull_request:
+    branches:
+      - stable
+  workflow_dispatch: {}
 
 jobs:
   build:
