--- a/Assets/03_Scripts/01_Lobby/Bonkers.Lobby.asmdef
+++ b/Assets/03_Scripts/01_Lobby/Bonkers.Lobby.asmdef
@@ -11,6 +11,7 @@
         "Unity.Services.Lobbies",
         "Unity.Services.Matchmaker",
         "Unity.Services.Relay",
+        "Unity.Mathematics",
         "Unity.InputSystem",
         "Unity.Cinemachine",
         "Unity.TextMeshPro",
@@ -18,6 +19,7 @@
         "ParrelSync",
         "UniTask",
         "UniTask.TextMeshPro",
+        "ProjectDawn.Mathematics",
         "CGTK.Utils.Extensions",
         "CGTK.Utils.UnityDelegates",
         "Bonkers.Shared"
