--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.coffee.ui-effect": "file:C:/Users/todor/Desktop/UIEffect-upm/UIEffect-upm",
     "com.github.superunitybuild.buildactions": "4.0.1",
     "com.unity.addressables": "1.21.18",
     "com.unity.ai.navigation": "1.1.5",
