--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,9 @@
 {
   "dependencies": {
-    "com.coffee.ui-effect": "file:C:/Users/todor/Desktop/UIEffect-upm/UIEffect-upm",
     "com.github.superunitybuild.buildactions": "4.0.1",
-    "com.unity.addressables": "1.21.18",
+    "com.unity.addressables": "1.21.19",
     "com.unity.ai.navigation": "1.1.5",
-    "com.unity.burst": "1.8.10",
+    "com.unity.burst": "1.8.11",
     "com.unity.cinemachine": "3.0.0-pre.9",
     "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
@@ -16,7 +15,7 @@
     "com.unity.probuilder": "5.1.1",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.services.cloud-build": "1.0.5",
-    "com.unity.services.lobby": "1.1.0",
+    "com.unity.services.lobby": "1.1.1",
     "com.unity.services.matchmaker": "1.1.2",
     "com.unity.services.multiplay": "1.0.5",
     "com.unity.services.relay": "1.0.5",
@@ -69,6 +68,7 @@
         "com.openupm",
         "com.solidalloy",
         "org.nuget",
+        "com.coffee.ui-effect",
         "com.github.superunitybuild.buildactions",
         "com.github.superunitybuild.buildtool"
       ]
