--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -27,6 +27,7 @@
     "com.unity.testtools.codecoverage": "1.2.4",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.5",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.transport": "2.1.0",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "14.0.8",
