--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.burst": "1.8.11",
     "com.unity.cinemachine": "3.0.0-pre.9",
+    "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
